feat: status buttons

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -10,8 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.14.159",
+    "@nuxt/fonts": "^0.10.2",
+    "@nuxtjs/ionic": "^0.15.1",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
+    "nuxt": "latest",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-lottie": "^3.3.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.9.1",
+    "@unocss/nuxt": "^0.64.1",
+    "eslint": "^9.14.0",
+    "unocss": "^0.64.1"
   }
 }
