--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/fonts": "^0.10.2",
     "@nuxtjs/ionic": "^0.15.1",
+    "@pinia/nuxt": "^0.7.0",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0",
+    "howler": "^2.2.4",
     "nuxt": "latest",
     "vue": "latest",
     "vue-router": "latest",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.9.1",
+    "@types/howler": "^2.2.12",
     "@unocss/nuxt": "^0.64.1",
     "eslint": "^9.14.0",
     "unocss": "^0.64.1"
