chore: add unocss to eslint

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
     "vscode": {
       "extensions": [
         "Vue.volar",
-        "bradlc.vscode-tailwindcss"
+        "-bradlc.vscode-tailwindcss"
       ]
     }
   },
