--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "vue3-lottie": "^3.3.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.9.1",
+    "@antfu/eslint-config": "^3.9.2",
     "@types/howler": "^2.2.12",
+    "@unocss/eslint-plugin": "^0.64.1",
     "@unocss/nuxt": "^0.64.1",
     "eslint": "^9.14.0",
     "unocss": "^0.64.1"
