--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.10.2",
+    "@nuxt/icon": "^1.8.2",
     "@nuxtjs/ionic": "^0.15.1",
     "@pinia/nuxt": "^0.7.0",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0",
     "howler": "^2.2.4",
+    "lottie-web": "^5.12.2",
     "nuxt": "latest",
+    "realtime-bpm-analyzer": "^4.0.2",
     "vue": "latest",
     "vue-router": "latest",
     "vue3-lottie": "^3.3.1"
