--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@unocss/eslint-plugin": "^0.64.1",
     "@unocss/nuxt": "^0.64.1",
     "eslint": "^9.14.0",
+    "typescript": "^5.7.2",
     "unocss": "^0.64.1"
   }
 }
