--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "dev:ios": "bash ./scripts/ios-dev.sh",
-    "dev:android": "bash ./scripts/android-dev.sh"
+    "dev:android": "bash ./scripts/android-dev.sh",
+    "sync": "nuxt generate && npx cap sync"
   },
   "dependencies": {
     "@capacitor/android": "6.2.0",
