--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/ionic": "^0.15.1",
     "@pinia/nuxt": "^0.7.0",
     "@vueuse/core": "^11.2.0",
+    "@vueuse/motion": "^2.2.6",
     "@vueuse/nuxt": "^11.2.0",
     "howler": "^2.2.4",
     "lottie-web": "^5.12.2",
