--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@vueuse/core": "^11.2.0",
     "@vueuse/motion": "^2.2.6",
     "@vueuse/nuxt": "^11.2.0",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-vue": "^8.5.1",
     "howler": "^2.2.4",
     "lottie-web": "^5.12.2",
     "nuxt": "latest",
+    "nuxt-swiper": "^2.0.0",
     "realtime-bpm-analyzer": "^4.0.2",
     "vue": "latest",
     "vue-router": "latest",
@@ -47,5 +50,6 @@
   },
   "resolutions": {
     "chokidar": "^3"
-  }
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
